--- a/oefening-03/index.html
+++ b/oefening-03/index.html
@@ -10,8 +10,8 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about"></a>About</li>
-                <li><a href="#contact"></a>Contact</li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
