oefeningen tem 9 gemaakt

--- a/oefening-04/index.html
+++ b/oefening-04/index.html
@@ -6,16 +6,16 @@
     <title>Oefening 4</title>
 </head>
 <body>
-    <header>
+      <header>
         <h1>Lijstjes zijn een plezier</h1>
     </header>
-    <body>
+    <main>
         <p>In deze lijst gaan we opsommen welke thema's er aan bod komen in dit vak</p>
         <ul>
-            <li>Html</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
+            <li><strong>Html</strong></li>
+            <li><strong>CSS</strong></li>
+            <li><strong>JavaScript</strong></li>
         </ul>
-    </body>
+    </main>
 </body>
 </html>
