alle oef afgemaakt

--- a/oefening-16/index.html
+++ b/oefening-16/index.html
@@ -39,7 +39,9 @@
     </main>
     <aside>
         <h2 id="#contact">CONTACT</h2>
-        <p><em>AP-Hogeschool<br>Ellermanstraat 33<br>2060 Antwerpen<br><a href="mailto:info@ap.be">email ons</a><br>+32 3 220 33 00 (tot 18u)</em></p>
+        <address>
+            <p><em>AP-Hogeschool<br>Ellermanstraat 33<br>2060 Antwerpen<br><a href="mailto:lector@ap.be">email ons</a><br>+32 3 220 33 00 (tot 18u)</em></p>
+        </address>
     </aside>
     <footer>
         <p>&copy; 2025 <a href="www.ap.be">AP-Hogeschool</a></p>
